--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">top_artistas</string>
+    <string name="nombre">Nombre</string>
+    <string name="reproducciones">Reproducciones</string>
+    <string name="oyentes">Oyentes</string>
+    <string name="imagen_artista">Imagen del Artista</string>
+    <string name="imagen_song">Imagen de la Canción</string>
+    <string name="titleArtists">Top 10 Artistas más Escuchados</string>
 </resources>
